Update card layout to have wrapping cards, fix newline character after phone number

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@ body {
   background-color: tan;
   color: black;
 }
+
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
